[FE] - refactor: fix overflow bug

--- a/src/pages/client/lecturer/SourceCodePlagiarismManagement/SourceCodePlagiarismPairDetails/styles.module.scss
+++ b/src/pages/client/lecturer/SourceCodePlagiarismManagement/SourceCodePlagiarismPairDetails/styles.module.scss
@@ -141,6 +141,6 @@
   }
 
   .codeContent {
-    overflow: auto;
+    // overflow: auto;
   }
 }
